[metadata]
name = latexrun
version = attr: latexrun.__version__
author = Deca Technologies
description = Provides customized greetings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Deca-Technologies/precipitate/python/tool

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    latexrun = latexrun.latexrun:main

[tool:pytest]
testpaths = tests
addopts =
    -q
    --cov-report=term-missing:skip-covered
    --cov
    --durations=5
    --ignore=acceptance_test
